# snorkle

./: .gitignore  Cargo.toml  Makefile  README.md  request.sh
apps/basic/: package-lock.json  package.json  webpack.config.js
apps/basic/public/: index.html
apps/basic/src/: App.tsx  index.tsx  theme.ts
apps/snorkle-dashboard/: Dockerfile  README.md  docker-compose.yml  next.config.mjs  nginx.conf  package.json
apps/snorkle-mapping-dashboard/: README.md
apps/snorkle-test-interface/: README.md  index.html  package-lock.json  package.json  postcss.config.js  vite.config.js  webpack.config.js
apps/snorkle-test-interface/public/: manifest.json
apps/snorkle-test-interface/src/: App.css  App.jsx  KeyVaultContext.jsx  NetworkContext.jsx  index.jsx  main.jsx  routing.jsx  theme.js
apps/wager-dashboard/: next.config.js  package-lock.json  package.json
backend/: Cargo.toml  Makefile  README.md  request.sh  test.py
backend/gateway/: Cargo.toml
backend/gateway/src/: main.rs  oracle.rs
backend/interface/: Cargo.toml
backend/interface/src/: lib.rs
backend/oracle/: Cargo.toml
backend/oracle/src/: fetch.rs  gateway.rs  http.rs  main.rs  tdx.rs  transaction.rs
basketball_scores_api/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
basketball_scores_api/.sqlx/: query-1bd1f091f65cc2a81f8845c33f435174c7fb4e0cadacd9b1f3d04ef3f18d5919.json  query-2385626845101e770c47d582b7efdacb7214a5523a0b3f21192cacf54c956631.json  query-2ca22d357435534bdf6479b90d1e9f53e302031d54461bf8b0fa4886e60c2b23.json  query-72b6321f7cdeaf746048f0aa9c9ee12707949cf5bca54d0ed184f490d058b8d6.json  query-880045d300b70e168d08c3c72b2e85a1f13bb1cd431e423dfec4f091595d146d.json  query-9f64e1ba6a1233dad3f31582b156ecb5200277889e0d037d3789fcbf35d7c5d5.json  query-a40b616ae5025ca96d190f614a22cc88c8f8319fa2a0b7a2d5d61a76fb4dbe7e.json  query-acfe6ceb6d8dc7467a7fbe09d90227eb8c8f1183594c7c1f6d1f8770906ac95d.json  query-bc7525ad69327b39f489f4214811d02c4da4d80f918a3e0dcb8f82a2e6cfab98.json  query-f03bd89e651acc7154d1aff17cca73cf53094c16d0ed5744d08dc49fb9d6d98d.json
basketball_scores_api/migrations/: 20250514182433_initial_schema.up.sql
basketball_scores_api/src/: db.rs  handlers.rs  main.rs  models.rs  nba_data.rs
contracts/proto_snorkle_bet_000/: program.json
contracts/proto_snorkle_bet_000/src/: main.leo
contracts/proto_snorkle_bet_000/tests/: deposit_and_withdraw.leo
contracts/proto_snorkle_oracle_000/: program.json
contracts/proto_snorkle_oracle_000/src/: main.leo
contracts/proto_snorkle_oracle_001/src/: main.leo
contracts/proto_snorkle_oracle_002/: program.json
contracts/proto_snorkle_oracle_002/src/: main.leo
frontend/: Cargo.toml
frontend/src/: main.rs  oracle.rs
infra/: README.md  main.tf  outputs.tf  variables.tf
oracle/: Cargo.toml
oracle-api/: Cargo.toml
oracle-api/src/: lib.rs
oracle/src/: http.rs  main.rs
rust/generate_oracle_submission/: Cargo.toml
rust/generate_oracle_submission/resources/: proto_snorkle_oracle_001.aleo
(+129 files in other folders)
