[workspace]
resolver = "1"
members = ["oracle", "gateway", "interface"]

[workspace.dependencies]
bincode = { version="2", features=["serde"] }
serde = { version = "1", features = ["derive"] }
tokio-util = "0.7"
futures = "0.3"
log = "0.4"
snarkvm = { version="1.6" }

[profile.release]
opt-level = 3
