[package]
name = "basketball_scores_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
lazy_static = "1.4.0"

# For PostgreSQL
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid", "chrono", "json" ] }
dotenvy = "0.15" 