[package]
name = "snorkle-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { workspace=true }
serde_json = "1"
anyhow = "1"
bincode = { workspace=true }
snorkle-oracle-interface = { path="../interface" }
tokio-util = { workspace=true, features=["codec"] }
futures = { workspace=true }
tokio-stream = "0.1"
env_logger = "0.8"
log = { workspace=true }
reqwest = { version="0.12", features=["json"] }
