[package]
name = "snorkle-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
snorkle-oracle-interface = { path="../interface" }
bincode = { workspace=true }
anyhow = "1"
bytes = "1"
ureq = { version = "3", features = ["json"] }
rand = "0.8"
sha2 = "0.10"
ecdsa = "0.16"
p256 = "0.13"
dns-lookup = "2.0"
tokio-util = { workspace=true, features=["codec"] }
snarkvm = {workspace=true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
schnorrkel = "0.11"
base64 = "0.22"

[target.'cfg(target_env = "sgx")'.dependencies]
sgx_types = "1"
sgx_urts = "1"
sgx_tstd = { version = "1", features = ["backtrace"] }
sgx_tcrypto = "1"
