[package]
name = "snorkle-oracle"
version = "0.1.0"
edition = "2024"

[features]
default = []
extra-verify = []

[dependencies]
snorkle-oracle-interface = { path="../interface" }
bincode = { workspace=true }
anyhow = "1"
bytes = "1"
serde_json = "1"
ureq = { version = "3", features = ["json"] }
rand = "0.8"
tokio-util = { workspace=true, features=["codec"] }
snarkvm = {workspace=true }
serde = "1"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
base64 = "0.22"

[target.'cfg(target_env = "sgx")'.dependencies]
sgx_types = "1"
sgx_urts = "1"
sgx_tstd = { version = "1", features = ["backtrace"] }
sgx_tcrypto = "1"
